@@ -4196,6 +4196,13 @@ Example  : rrescue bob\n\r\
 When mounted, the fighter can swoop in to rescue a group member that is in combat, \
 scooping them onto his or her mount and ending combat for that group member.
 
+FIGHTER_RIDINGFIGHT=RIDING_FIGHT
+RIDING_FIGHT=<ABILITY>\
+Example  : \n\r\
+The mounted fighter is able to maneuver his or her mounted opponent into another \
+room by simply heading that way.  The opponent must be in one-on-one \
+combat with the fighter for it to work.
+
 PALADIN_RIGHTEOUSDEFENSE=RIGHTEOUS_DEFENSE
 PALADIN_RIGHTEOUS_DEFENSE=RIGHTEOUS_DEFENSE
 RIGHTEOUS_DEFENSE=<ABILITY>\
@@ -4289,6 +4296,16 @@ Example  : \n\r\
 The Thief is able to maneuver his or her fighting opponent into another \
 room by simply heading that way.  The opponent must be in one-on-one \
 combat with the thief for it to work.
+
+RUN_OVER=SKILL_RUNOVER
+RUNOVER=SKILL_RUNOVER
+SKILL_RUNOVER=<ABILITY>\
+Usage    : RUNOVER [TARGET]\n\r\
+Example  : runover orc\n\r\
+While driving a caravan or similar large land wagon, this command can be used \
+to aim the team at the given target mob in the same room as the caravan.  When \
+done, the next move from one room to another will potentially damage the target \
+horribly under the wheels and hooves of the pulling team.
 
 THIEF_SAFECRACKING=SAFECRACKING
 SAFECRACKING=<ABILITY>\
